<resources>
    <string name="app_name">GrowUp</string>
    <string name="log_in">Войти</string>
    <string name="get_started">Начать</string>
    <string name="preview_text">Thus much I thought proper to tell you in relation to yourself</string>
    <string name="register">Регистрация</string>
    <string name="email">Email</string>
    <string name="emailRegistration">Email (необязательно)</string>
    <string name="password">Пароль</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="farmer">Фермер</string>
    <string name="wholesaler">Оптовик</string>
    <string name="me">Я</string>
    <string name="number">Номер</string>
    <string name="market">Маркет</string>
    <string name="products">Продукция</string>
    <string name="verify_code">Введите код</string>

    <string name="nointernet_title">УПС! Подключение к Интернету отсутствует</string>
    <string name="nointernet_text">Проверьте подключение к интернету и попробуйте снова</string>
    <string name="enter_number">Введите номер</string>
    <string name="main">Главная</string>
    <string name="log_out">Выйти</string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>
    <string name="region">Область:</string>
    <string name="district">Район:</string>
    <string name="profile">Профиль</string>
    <string name="entry_code">Код активации отправлен на Ваш телефон по SMS. Пожалуйста, введите его ниже.</string>
    <string name="entry_login">Чтобы войти, выберите страну и введите свой номер телефона</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">редактировать профиль</string>
    <string name="save">сохранить</string>
    <string name="calling">Позвонить</string>
    <string name="messaging">Написать</string>
    <string name="add_announcement">Добавить объявление</string>
    <string name="name_of_product">Введите название товара</string>
    <string name="category">Категория:</string>
    <string name="subcategory">Подкатегория:</string>
    <string name="unit_price">Цена за 1 кг(т)</string>
    <string name="unit_price_animal">Цена за 1 шт</string>
    <string name="total_price">Общая стоимость</string>
    <string name="message">Сообщение</string>
    <string name="add">Добавить</string>
    <string name="my_products">Мои объявления</string>
    <string name="size">Объем</string>
    <string name="sold">Продано</string>
    <string name="favorite">Избранное</string>
    <string name="statistic">Статистика</string>
    <string name="count_animal">штук</string>
    <string name="animal">Животноводство</string>

    <string name="about_us">Данное приложение является разработкой команды Enactus KRSU в целях
        поддержки и развития сельского хозяйства в Кыргызской Республике. С помощью внутреннего функционала
        данного продукта пользователь достаточно оперативно сможет получить необходимую ему информацию в виде статистики
        (диаграмм),
        выбора категории продукции для выращивания, а также в его последствии покупки/продажи.
    </string>
    <string name="edit_product">Редактировать</string>
    <string name="save_chages">Сохранить изменения</string>
    <string name="remove">Удалить</string>
    <string name="add_order">Оставить заявку</string>

</resources>
