<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
    android:id="@+id/middle_menu"
    android:checkableBehavior="none"
    >
        <item
                android:icon="@drawable/main_icon_48"
                android:id="@+id/nav_main"
                android:title="@string/main"/>
        <item
                android:id="@+id/nav_search"
                android:title="@string/search"/>
        <item
                android:icon="@drawable/market_icon_48"
                android:id="@+id/nav_market"
                android:title="@string/market"/>
    </group>
    <group android:id="@+id/bottom_menu"
           android:checkableBehavior="none">
        <item
                android:icon="@drawable/settings_icon_48"
            android:id="@+id/nav_settings"
            android:title="@string/settings"/>
        <item
                android:icon="@drawable/logout_icon_48"
            android:id="@+id/nav_log_out"
            android:title="@string/log_out"/>
    </group>

</menu>