<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/profile_gray">
    <android.support.design.widget.FloatingActionButton
            android:backgroundTint="@color/profile_gray"
            android:id="@+id/back_button"
            android:layout_margin="18dp"
            android:src="@drawable/back_button_48"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:ignore="UnusedAttribute"/>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        tools:context="com.example.growup.ui.profile.EditProfileActivity"
        android:orientation="vertical">

    <!--<TextView-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:textColor="@color/black"-->
            <!--android:textStyle="bold"-->
            <!--android:textSize="30sp"-->
            <!--android:text="@string/edit_profile"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"/>-->
    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/edit_profile_image"
            android:layout_marginTop="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
    <EditText
            android:hint="@string/name"
            android:layout_marginTop="10dp"
            android:id="@+id/edit_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:hint="@string/last_name"
            android:id="@+id/edit_profile_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:hint="@string/emailRegistration"
            android:id="@+id/edit_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:hint="@string/region"
            android:id="@+id/edit_profile_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/save_user_data_btn"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg"
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>
</RelativeLayout>