<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <LinearLayout
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:text="@string/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <ImageView
                    android:src="@drawable/user_icon"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="100dp"
                    android:layout_height="100dp"/>

            <LinearLayout
                    android:layout_marginTop="30dp"

                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <RadioButton
                        android:layout_marginRight="50dp"
                        android:text="@string/farmer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <RadioButton
                        android:layout_marginLeft="50dp"
                        android:text="@string/angrosist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>


            <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                    android:inputType="textEmailAddress"
            />
            <EditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                    android:inputType="textEmailAddress"
            />

            <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                    android:inputType="textEmailAddress"
            />
            <EditText
                    android:id="@+id/number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/number"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                    android:inputType="number"
            />

            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                    android:inputType="textPassword"
            />


            <Button
                    android:layout_marginTop="20dp"
                    android:id="@+id/register_btn"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textSize="13sp"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_button"
            />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>