<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:text="@string/log_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <ImageView
                    android:src="@drawable/user_icon"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="100dp"
                    android:layout_height="100dp"/>
            <TextView

                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="@string/entry_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:id="@+id/verify_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/verify_code"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                    android:inputType="number"
                    tools:ignore="TextFields"/>

            <Button
                    android:layout_marginTop="20dp"
                    android:id="@+id/login_btn"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in"
                    android:textSize="13sp"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_button"
            />
            <ProgressBar
                    android:layout_marginTop="20dp"
                    android:id="@+id/progress_bar"
                    android:layout_gravity="center"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
            />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>